@@ -9,3 +9,4 @@ ggplot2 0.8.7 (2010-XX-XX) ----------------------------------------
 * scale_area: gains a legend argument like all other scales
 * scale_colour_brewer: gains na.colour argument to set colour of missing values
 * corrected label generation for computed aesthetics (..x..) and special names (`x x`)
+* coord_map gains xlim and ylim arguments to control region of projection
